fixed text alignment

--- a/css/dayCare.css
+++ b/css/dayCare.css
@@ -152,7 +152,7 @@ html[data-theme='dark'] {
 }
 .daycare-hero-smalltext{
     font-size: 20px;
-    margin: 10px !important ;
+    margin: 10px 0px !important ;
     /* padding-top: 10px; */
     display: flex;
     align-items: start;
